# Order_Agent

./: .gitignore  INTEGRATION_GUIDE.md  README.md  TESTING.md  catalog.json  foodagent.py  full_response.json  main.py  menu-brows.py  pyproject.toml  pytest.ini  res-api-test.py  resapi2.py  restaurant.json  run_tests.py  sample.json  start_dev.sh  text_to_speech.py
.github/: copilot-instructions.md
agents/: base_agent.py  food_agent.py  payment_agent.py  quick_commerce_agent.py  shopping_agent.py  travel_agent.py
config/: settings.py
master/: __init__.py  master_agent.py
mcp/: __init__.py  food_api_client.py  quick_commerce_scrapper.py  razorpay_api_client.py  speech_to_text_client.py
quickpick_frontend/: README.md  index.html  tailwind.config.ts
quickpick_frontend/src/: index.css
quickpick_frontend/src/components/: NutritionDashboard.tsx  OrderTrackingComponent.tsx  PriceComparisonComponent.tsx  QuickActionsFloat.tsx  SavingsTracker.tsx  VoiceOrderComponent.tsx
quickpick_frontend/src/components/ui/: button.tsx
quickpick_frontend/src/config/: environment.ts
quickpick_frontend/src/hooks/: useQuickOrder.ts
quickpick_frontend/src/lib/: api.ts
quickpick_frontend/src/pages/: Index.tsx
scripts/: smoke_test_backend.py
tests/: __init__.py  conftest.py
tests/e2e/: test_complete_workflows.py
tests/fixtures/: sample_data.json
tests/integration/: test_api_integration.py
tests/mocks/: mock_clients.py
tests/unit/: test_base_agent.py  test_food_agent.py  test_master_agent.py  test_quick_commerce_agent.py
utils/: helpers.py  logger.py
