[project]
name = "multi-agent-ai-system"
version = "0.1.0"
description = "Multi-agent AI system with FastAPI backend for food, travel, and shopping assistance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.6",
    "langgraph>=0.0.20",
    "serpapi>=0.1.5",
    "razorpay>=1.4.0",
    "mcp[cli]>=1.9.3",
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.9.0",
    "webdriver-manager>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.25.0",
    "fastapi[all]>=0.104.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "master", "mcp"]
